k8s/administration/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: administration-service
  namespace: mymeetings
  labels:
    app: administration-service
spec:
  type: ClusterIP
  selector:
    app: administration-service
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
